--- a/index.html
+++ b/index.html
@@ -1246,6 +1246,12 @@
 	<script>
 		let tg = window.Telegram.WebApp; //получаем объект webapp телеграма 
 
+		tg.MainButton.text = "Changed Text"; //изменяем текст кнопки 
+		tg.MainButton.setText("Changed Text1"); //изменяем текст кнопки иначе
+		tg.MainButton.textColor = "#fffff"; //изменяем цвет текста кнопки
+		tg.MainButton.color = "#ffc156"; //изменяем цвет бэкграунда кнопки
+		tg.MainButton.setParams({"color": "#f7f7f7"}); //так изменяются все параметры
+
 		const addBtn = document.querySelectorAll('.add');
 
 		for(let item of addBtn){
