--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 					</div>
 				</div>
 				<div>
-					<button class="add">Добавить 1</button>
+					<button class="add">Добавить</button>
 				</div>
 			</div>
 						<div class="item">
@@ -845,7 +845,7 @@
 					</div>
 				</div>
 				<div>
-					<button class="add">Добавить 2</button>
+					<button class="add">Добавить</button>
 				</div>
 			</div>
 						<div class="item">
@@ -1237,7 +1237,7 @@
 					</div>
 				</div>
 				<div>
-					<button class="add">Добавить 3</button>
+					<button class="add">Добавить</button>
 				</div>
 			</div>
 		</div>
@@ -1248,7 +1248,7 @@
 
 		tg.MainButton.text = "Changed Text"; //изменяем текст кнопки 
 		tg.MainButton.setText("Changed Text1"); //изменяем текст кнопки иначе
-		tg.MainButton.textColor = "#fffff"; //изменяем цвет текста кнопки
+		tg.MainButton.textColor = "#ffffff"; //изменяем цвет текста кнопки
 		tg.MainButton.color = "#ffc156"; //изменяем цвет бэкграунда кнопки
 		tg.MainButton.setParams({"color": "#f7f7f7"}); //так изменяются все параметры
 
