--- a/index.html
+++ b/index.html
@@ -49,6 +49,25 @@
 		.title{
 			font-weight: 700;
 		}
+		.order{
+			background: #f7f7f7;
+			width: 100%;
+			height: 100%;
+			position: fixed;
+			z-index: 1;
+			left: 0;
+			right: 0;
+			top: 0;
+			bottom: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			transition: all 0.3s;
+		}
+		.order.active{
+			z-index: -1;
+			opacity: 0;
+		}
 		@media (max-width: 450px){
 			.text {
 				flex-direction: column;
@@ -1233,7 +1252,7 @@
 						Картошка 3
 					</div>
 					<div class="price">
-						<span>1</span> грн
+						<span>3</span> грн
 					</div>
 				</div>
 				<div>
@@ -1241,6 +1260,10 @@
 				</div>
 			</div>
 		</div>
+	</div>
+
+	<div class="order active">
+		вторая страница
 	</div>
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script>
@@ -1294,8 +1317,11 @@
 			})
 		})
 	})
+
+	const order = document.querySelector('.order');
+
 	tgWeb.onEvent('mainButtonClicked', () => {
-		window.location.href = 'https://nikitatarasikov.github.io/bot/order.html';
+		order.classList.toggle('active')
 	})
 
 	
