--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 						Картошка 3
 					</div>
 					<div class="price">
-						<span>1</span> грн
+						<span>3</span> грн
 					</div>
 				</div>
 				<div>
@@ -285,7 +285,7 @@
 
 	tgWeb.onEvent('mainButtonClicked', () => {
 		tg.expand();
-		order.classList.remode('active')
+		order.classList.remove('active')
 	})
 
 	
