--- a/index.html
+++ b/index.html
@@ -137,14 +137,8 @@
 				max-width: 50%;
 			}
 		}
-		.user-id{
-			color:#ffc156;
-		}
 	</style>
 	<div class="container">
-		<div class="user-id">
-
-		</div>
 		<div class="inner">
 			<div class="item">
 				<div class="img">
@@ -187,7 +181,7 @@
 						Картошка 3
 					</div>
 					<div class="price">
-						<span>3</span> грн
+						<span>1</span> грн
 					</div>
 				</div>
 				<div>
@@ -296,7 +290,7 @@
 		tg.expand();
 		order.classList.remove('active')
 
-		window.open('https://api.telegram.org/bot5165466257:AAGUwH0IZrvsR-pz00Pmw25j0Q2GlzbNXts/sendMessage?chat_id='+userId+'&text=заказномер1');
+		tg.sendData('data')
 	})
 
 	
